# rsblog

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  sample.env  templates
scripts/: run-dev.sh  tailwind-dev.sh
src/: db.rs  forwarded_prefix.rs  main.rs
src/api/: mod.rs
src/api/core/: config.rs  error_handlers.rs  mod.rs  security.rs
src/api/models/: base.rs  mod.rs  tokens.rs  user.rs
src/api/repositories/: base.rs  mod.rs  user.rs
src/api/routes/: mod.rs
src/api/routes/v1/: auth.rs  mod.rs  root.rs  users.rs
src/api/schemas/: mod.rs  tokens.rs  user.rs  users.rs
src/api/services/: base.rs  mod.rs
src/app/: mod.rs
src/app/models/: mod.rs  page_view.rs  user.rs
src/app/static/: .gitignore  package.json  tailwind.config.js
src/app/templates/: index.html
src/app/templates/account/: navbar.html  signin.html  signup.html
src/app/templates/admin/: index.html  profile.html
src/app/templates/admin/base/: base.html  footer.html  header.html  sidebar.html
src/app/templates/base/: base.html  cookie_banner.html  default.html  footer.html  header.html
src/app/templates/zaccount/: signin.html
src/app/utils/: errors.rs
src/app/views/: account.rs  mod.rs  root.rs  users.rs
src/app/views/admin/: mod.rs  profile.rs  root.rs
src/common/: config.rs  db.rs  mod.rs
